--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .ball-container {
   position: fixed;
   width: 100%;
   height: 100%;
+  background-color: #084991;
 }
 
 .ball {
-  --animation-duration: 2s;
+  --animation-duration: 3s;
   position: absolute;
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
+  margin: 20px;
   border-radius: 50%;
   animation-duration: var(--animation-duration);
   animation-name: bounce;
@@ -16,73 +24,71 @@
 
 .ball:nth-child(1) {
   --animation-duration: 3s;
-  top: 90%;
-  left: 20%;
+  top: 55%;
+  left: 25%;
   background-color: #ed9d20;
 }
 
 .ball:nth-child(2) {
   --animation-duration: 2.5s;
-  top: 90%;
-  left: 30%;
+  top: 80%;
+  left: 35%;
   background-color: #ed7220;
 }
 
 .ball:nth-child(3) {
   --animation-duration: 3.2s;
-  top: 90%;
-  left: 40%;
+  top: 75%;
+  left: 45%;
   background-color: #ef5416;
 }
 
 .ball:nth-child(4) {
   --animation-duration: 2.2s;
-  top: 90%;
-  left: 50%;
+  top: 80%;
+  left: 55%;
   background-color: #ea4221;
 }
 
 .ball:nth-child(5) {
   --animation-duration: 3.5s;
-  top: 90%;
-  left: 60%;
+  top: 60%;
+  left: 65%;
   background-color: #ea2127;
 }
 
 @keyframes bounce {
   0% {
-    -webkit-transform: translateY(-500px);
+    -webkit-transform: translateY(-550px);
     transform: translateY(-500px);
     -webkit-animation-timing-function: ease-in;
     animation-timing-function: ease-in;
-    opacity: 0;
   }
-  38% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  55% {
-    -webkit-transform: translateY(-65px);
-    transform: translateY(-65px);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  72% {
+  30% {
     -webkit-transform: translateY(0);
     transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out;
   }
-  81% {
-    -webkit-transform: translateY(-28px);
-    transform: translateY(-28px);
+  50% {
+    -webkit-transform: translateY(-70px);
+    transform: translateY(-70px);
     -webkit-animation-timing-function: ease-in;
     animation-timing-function: ease-in;
   }
-  90% {
+  65% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  75% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  85% {
     -webkit-transform: translateY(0);
     transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
@@ -97,7 +103,7 @@
   100% {
     -webkit-transform: translateY(0);
     transform: translateY(0);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
 }
