--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 .ball {
-  --animation-duration: 3s;
+  --animation-duration: 6s; /* default duration, originally was 3s */
   position: absolute;
   width: 150px;
   height: 150px;
@@ -21,92 +21,87 @@
   animation-name: bounce;
 }
 
+/*  every ball has a separate duration */
 .ball:nth-child(1) {
-  --animation-duration: 3s;
-  top: 55%;
-  left: 25%;
+  --animation-duration: 5.7s;
+  top: 60%;
+  left: 30%;
   background-color: #ed9d20;
 }
 
 .ball:nth-child(2) {
-  --animation-duration: 2.5s;
+  --animation-duration: 5s;
   top: 80%;
   left: 35%;
   background-color: #ed7220;
 }
 
 .ball:nth-child(3) {
-  --animation-duration: 3.2s;
+  --animation-duration: 5.7s;
   top: 75%;
   left: 45%;
   background-color: #ef5416;
 }
 
 .ball:nth-child(4) {
-  --animation-duration: 2.2s;
+  --animation-duration: 4.7s;
   top: 80%;
   left: 55%;
   background-color: #ea4221;
 }
 
 .ball:nth-child(5) {
-  --animation-duration: 3.5s;
+  --animation-duration: 6s;
   top: 60%;
   left: 65%;
   background-color: #ea2127;
 }
-
+/* animation */
 @keyframes bounce {
   0% {
-    -webkit-transform: translateY(-550px);
-    transform: translateY(-500px);
-    -webkit-animation-timing-function: ease-in;
+    transform: translateY(-800px);
     animation-timing-function: ease-in;
   }
-  30% {
-    -webkit-transform: translateY(0);
+  25% {
     transform: translateY(0);
-    -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out;
+  }
+  38% {
+    transform: translateY(-300px);
+    animation-timing-function: ease-in;
   }
   50% {
-    -webkit-transform: translateY(-70px);
-    transform: translateY(-70px);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  65% {
-    -webkit-transform: translateY(0);
     transform: translateY(0);
-    -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out;
   }
-  75% {
-    -webkit-transform: translateY(-30px);
-    transform: translateY(-30px);
-    -webkit-animation-timing-function: ease-in;
+  60% {
+    transform: translateY(-150px);
     animation-timing-function: ease-in;
   }
-  85% {
-    -webkit-transform: translateY(0);
+  70% {
     transform: translateY(0);
-    -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out;
   }
-  95% {
-    -webkit-transform: translateY(-5px);
-    transform: translateY(-5px);
-    -webkit-animation-timing-function: ease-in;
+
+  80% {
+    transform: translateY(-75px);
+    animation-timing-function: ease-in;
+  }
+  88% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
+
+  94% {
+    transform: translateY(-35px);
     animation-timing-function: ease-in;
   }
   100% {
-    -webkit-transform: translateY(0);
     transform: translateY(0);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
   }
 }
 
+/* responsive */
 @media (max-width: 1000px) {
   .ball {
     width: 150px;
@@ -114,8 +109,8 @@
   }
   .ball:nth-child(1) {
     --animation-duration: 3s;
-    top: 70%;
-    left: 20%;
+    top: 75%;
+    left: 22%;
     background-color: #ed9d20;
   }
 
