--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@
 .ball {
   --animation-duration: 6s; /* default duration, originally was 3s */
   position: absolute;
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   animation-duration: var(--animation-duration);
   animation-name: bounce;
@@ -25,36 +25,36 @@
 /*  every ball has a separate duration */
 .ball:nth-child(1) {
   --animation-duration: 5.7s;
-  top: 40%;
+  bottom: 0%;
   left: 15%;
   background-color: #ed9d20;
 }
 
 .ball:nth-child(2) {
   --animation-duration: 5s;
-  top: 60%;
+  bottom: 0%;
   left: 2%;
   background-color: #ea4221;
 }
 
 .ball:nth-child(3) {
   --animation-duration: 5.7s;
-  top: 40%;
-  left: 3%;
+  bottom: 0%;
+  left: 5%;
   background-color: #ef5416;
 }
 
 .ball:nth-child(4) {
   --animation-duration: 4.7s;
-  top: 70%;
+  bottom: 0%;
   left: 12%;
   background-color: #ed7220;
 }
 
 .ball:nth-child(5) {
   --animation-duration: 6s;
-  top: 49%;
-  left: 13%;
+  bottom: 0%;
+  left: 18%;
   background-color: #ea2127;
 }
 /* animation */
